--- a/tools/SharpGen/SharpGen/SharpGen.csproj
+++ b/tools/SharpGen/SharpGen/SharpGen.csproj
@@ -2,10 +2,24 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.0</TargetFramework>
+        <PackageVersion>0.0.1</PackageVersion>
+        <Title>SharpGen</Title>
+        <Authors>Vitalii Sych</Authors>
+        <PreserveCompilationContext>true</PreserveCompilationContext>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+        <OutputPath>../../../build/tools/sharpgen/debug</OutputPath>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+        <OutputPath>../../../build/tools/sharpgen/release</OutputPath>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.4.0" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.4.0"/>
+        <PackageReference Include="RazorLight" Version="2.0.0-beta4"/>
     </ItemGroup>
 
 </Project>
